# YaYaLowCode

./: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json
api/: .gitignore  Cargo.toml
api/.yaya-skills/skill-automation-reviewer/: SKILL.md
api/.yaya-skills/skill-form-designer/: SKILL.md
api/.yaya-skills/skill-form-draft-assistant/: SKILL.md
api/src/: main.rs  openapi.rs  shared.rs
api/src/http/: router.rs
api/src/infrastructure/: legacy_bootstrap.rs  migrator.rs  mod.rs
api/src/infrastructure/entities/: agent_run_step_entity.rs  agent_session_entity.rs  automation_flow_entity.rs  automation_run_entity.rs  form_definition_entity.rs  form_detail_definition_entity.rs  form_storage_definition_entity.rs  form_view_entity.rs  iam_external_identity_entity.rs  iam_local_credential_entity.rs  iam_organization_membership_entity.rs  iam_role_entity.rs  iam_user_email_address_entity.rs  location_entity.rs  mod.rs  workflow_action_entity.rs  workflow_instance_entity.rs  workflow_task_entity.rs
api/src/modules/: agent_config.rs  apps.rs  automations.rs  files.rs  forms.rs  identity.rs  locations.rs  mod.rs  navigation.rs  settings.rs  workflows.rs
api/src/modules/agents/: capabilities.rs  dto.rs  mod.rs  plugins.rs  runner.rs  tools.rs
api/src/modules/apps/: dto.rs
api/src/modules/automations/: dto.rs  graph.rs  runtime.rs
api/src/modules/dingtalk/: client.rs  dto.rs  mod.rs  sync.rs
api/src/modules/forms/: dto.rs
api/src/modules/navigation/: dto.rs
api/src/platform/: api.rs  authorization.rs  config.rs  error.rs  form_storage.rs  mod.rs  records.rs  runtime.rs
app/: globals.css  (+2 more)
backend/: .gitignore  Cargo.toml
backend/src/: app_navigation_entity.rs  apps.rs  automation_flow_entity.rs  automation_node_entity.rs  automation_run_node_entity.rs  automations.rs  config.rs  forms.rs  main.rs  migrator.rs  navigation.rs  shared.rs
backend/src/http/: mod.rs  router.rs
backend/src/infrastructure/: legacy_bootstrap.rs  migrator.rs
backend/src/modules/: agent_config.rs  apps.rs  automations.rs  forms.rs  identity.rs  mod.rs  navigation.rs  settings.rs
backend/src/platform/: api.rs  automation_runs.rs  config.rs  error.rs  form_storage.rs  mod.rs  prelude.rs  records.rs
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
(+511 files in other folders)
