[package]
name = "yaya-api"
version = "0.2.0-alpha.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
sea-orm = { version = "2.0.0-rc.41", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
] }
sea-orm-migration = { version = "2.0.0-rc.41", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
rig-core = "0.40.0"
futures-util = "0.3.32"
tokio-stream = "0.1.18"
jsonwebtoken = "9"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

[patch.crates-io]
mime_guess = { path = "vendor/mime_guess" }
